[package]
name = "symbolicate"
version = "0.4.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ConradIrwin/symbolicate"
description = "symbolicate a macOS crash report"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-demangle = { version = "0.1.23", features = ["std"] }
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.114"
